--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/MingiKang1999/Capstone/issues"
   },
-  "homepage": "https://github.com/MingiKang1999/Capstone#readme"
+  "homepage": "https://github.com/MingiKang1999/Capstone#readme",
+  "dependencies": {
+    "express-async-handler": "^1.2.0"
+  }
 }
